# FEM2D

./: CHANGELOG.rst  CMakeLists.txt  ReadMe.txt  main.cpp  precompiled.h
FEM/TriangleMeshFEM/: AssembleEquation.h  EquationSolver.h  TriangleFEMStarter.h
FEM/TriangleMeshFEM/AssembleEquation/: AssembleEquation.inl
FEM/TriangleMeshFEM/detail/: AssembleEquation.inl  BoundaryConditions.inl  TriangleFEMStarter.inl
equationInit/: EllipticEquation.h
mesh/: mesh_builder.h
mesh/boost_datatypes/: types.h
mesh/detail/: mesh_builder.inl
mesh/mesh_types/: mesh_base.h
mesh/mesh_types/detail/: mesh_base.inl
mesh/points_field/: points_field.h
mesh/points_field/detail/: points_field.inl
mesh/trianglemesh/: trianglemesh.h
mesh/trianglemesh/detail/: trianglemesh.cpp  trianglemesh.inl
mesh/trianglemesh/detail/triangle/: triangle.c
plot/: plot_graphs.h
solver/: solver.h
solver/detail/: solver.inl
